# AsiPluginTemplate

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
AsiPluginTemplate/: CMakeLists.txt  main.cpp  main.hpp
base/: CMakeLists.txt
base/include/: SAMP.hpp  base_safe_check.hpp  config.hpp  game_offsets.hpp  hookD3D9.hpp  hookWndProc.hpp  patch.hpp  snippets.hpp
base/src/: SAMP.cpp  hookD3D9.cpp  hookWndProc.cpp  patch.cpp  snippets.cpp
docs/: CODE_DOC.md  README.md
docs/nmsp/: BASE.md
patch/: CMakeLists.txt
patch/include/: patch.hpp
patch/src/: patch.cpp
